# flask

./: BUILD.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.rs
bridge/: bindings.h  ffi.rs
config/: flask.toml
cpp/: resolver.cpp  resolver.hpp
src/: cli.rs  config.rs  main.rs
src/manager/: aur.rs  flatpak.rs  mod.rs  pacman.rs  snap.rs
tests/: aur_test.rs  flatpak_test.rs  pacman_test.rs  snap_test.rs
