[package]
name = "flask"
version = "0.1.0"
edition = "2021"
description = "your unnecessary multi-repo package manager"
authors = []
license = "MIT"

[[bin]]
name = "flask"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "2"
async-trait = "0.1"
toml = "0.8"
dirs = "5"

[build-dependencies]
cc = "1"
